<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EntryAddActivity">

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="fill_parent"
        android:layout_height="101dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/titleBar"
            android:layout_width="match_parent"
            android:layout_height="101dp"
            android:contentDescription="@string/descTitleBar"
            android:src="#0aa28b"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/titleIcon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="18dp"
            android:contentDescription="@string/descTitleIcon"
            android:src="@drawable/title_icon" />

    </RelativeLayout>

    <View
        android:id="@+id/entryDivider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#e0e0e0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />

    <CheckBox
        android:id="@+id/entryDailyToggle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="24dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="653dp"
        android:checked="false"
        android:text="@string/dailyToggleLabel"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/entryDescriptLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="50dp"
        android:text="@string/descriptLabel"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryDivider" />

    <EditText
        android:id="@+id/entryDescriptEditText"
        android:layout_width="406dp"
        android:layout_height="44dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:ems="10"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:hint="@string/entryDescriptHint"
        android:inputType="textPersonName"
        android:maxLength="32"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryDescriptLabel" />

    <TextView
        android:id="@+id/entrySectionLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="175dp"
        android:text="@string/sectionLabel"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryDivider" />

    <Spinner
        android:id="@+id/entrySectionSpinner"
        android:layout_width="120dp"
        android:layout_height="40dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entrySectionLabel" />

    <TextView
        android:id="@+id/entryTimeLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="300dp"
        android:text="@string/timeLabel"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryDivider" />

    <TimePicker
        android:id="@+id/entryTimePicker"
        android:layout_width="255dp"
        android:layout_height="210dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="5dp"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryTimeLabel"
        tools:targetApi="lollipop" />

    <Button
        android:id="@+id/entryFinishButton"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginLeft="25dp"
        android:layout_marginStart="25dp"
        android:layout_marginTop="125dp"
        android:onClick="onEntryFinishClick"
        android:text="@string/finishLabel"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryTimePicker" />

    <Button
        android:id="@+id/entryCancelButton"
        android:layout_width="115dp"
        android:layout_height="65dp"
        android:layout_marginLeft="200dp"
        android:layout_marginStart="200dp"
        android:layout_marginTop="125dp"
        android:onClick="onEntryCancelClick"
        android:text="@string/cancelLabel"
        android:textAllCaps="false"
        android:textColor="@android:color/black"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/entryTimePicker" />

</android.support.constraint.ConstraintLayout>